--- a/package.json
+++ b/package.json
@@ -4,13 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "node index.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env =jsdom",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
-  },
+   "start": "node index.js"
+}
+,
   "author": "",
   "license": "ISC",
   "dependencies": {
